# NeiRo-life

./: Cargo.toml  README.md  launch.json  requirements.txt
src/: main.py  main.rs
src/components/: creature.rs  eating_timer.rs  food.rs  mod.rs
src/engine/: camera.py  world_generator.py
src/entities/: player.py
src/game/: world.rs
src/systems/: interaction.rs  mod.rs  movement.rs
